--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "nuxt build",
         "start": "nuxt start",
         "generate": "nuxt generate",
-	"deploy": "git commit -am 'deploying via commit; git push'"
+	"deploy": "git commit -am 'deploying via commit' && git push"
     },
     "dependencies": {
         "@nuxtjs/robots": "^2.5.0",
